2005-05-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/sw.msg: New Swedish translation (thanks to (Magnus Henoch)

	* src/msgs/pt.msg: New Portuguese translation (thanks to iceburn)

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/msgs/nl.msg: Updated (thanks to Sander Devrieze)

2005-04-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth_ldap.erl: Added listing of users support

	* src/ejabberd.cfg.example: Updated LDAP options

	* src/ejabberd_ctl.erl: Better spelling, now prints full file
	paths, fixed checking of mnesia:install_fallback result, now
	"dump" command dumps only persistent tables

	* contrib/extract_translations/: A tool for extracting of
	translation strings from ejabberd code (thanks to Sergei Golovan)

2005-04-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard_ldap.erl: Bugfix (thanks to Mickael Remond)

2005-04-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added translation to submit
	button and "shared roster groups" header (thanks to iceburn and
	Sergei Golovan)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/mod_muc/mod_muc_room.erl: Minor update to simplify
	translation (thanks to Sergei Golovan)

	* src/tls/tls_drv.c: Reverted previous patch

2005-04-22  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Added mod_shared_roster documentation

	* src/ejabberd.hrl: Updated version

2005-04-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/jd2ejd.erl: Bugfix

2005-04-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth.erl: Added check for domain of registered user

	* src/web/ejabberd_web_admin.erl: Fixed user registration via web
	interface, fixed path to user's offline messages (thanks to
	Mickael Remond)

	* src/mod_disco.erl: Fixed domain listing when one virtual host is
	a subdomain of another

2005-04-18  Alexey Shchepin  <alexey@sevcom.net>

	* (all): ejabberd-0.9 released
