@@ -7,8 +7,8 @@ Building:
 Invoking 1:
     erl -noinput -s extract_translations -extra dirname message_file
 
-    where dirname is src dir of ejabberd source tree, message_file is a file
-    with translated messages (src/msgs/*.msg).
+    where dirname is the directory "src" in ejabberd's source tree root,
+    message_file is a file with translated messages (src/msgs/*.msg).
 
     Result is a list of messages from source files which aren't contained in
     message file.
